--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
+
   <head>
+
     <meta charset="utf-8">
 
     <!-- set viewport to device width to allow responsiveness -->
@@ -10,40 +12,61 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- link to custom stylesheet (always require after Bootstrap) -->
-    <link rel="stylesheet" href="/css/style.css" media="screen" title="no title" charset="utf-8">
-    <!-- jQuery from CDN -->
+    <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
 
+    <!-- jQuery from CDN -->
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
 
     <!-- link to custom javascript file (always require after external JS libraries) -->
+    <script type="text/javascript" src="js/app.js"></script>
 
     <title>Tic Tac Toe</title>
+
   </head>
+
   <body>
+
     <div class="container">
       <div class="row text-center">
-        <div class="col-md-12">
+        <div class="col-xs-12">
           <h1>Tic Tac Toe</h1>
           <hr>
         </div>
       </div>
+
       <div class="row">
 
         <!-- a column represents our game board -->
         <!-- the `offset` class helps us center the board -->
-        <div class="col-md-6 col-md-offset-3" id="board">
+        <div class="col-xs-6 col-xs-offset-3" id="board">
 
           <!-- you can put rows inside of columns! -->
           <!-- Bootstrap subdivides these 'nested' rows into 12 columns, too! -->
           <div class="row">
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
+            <div class="col-xs-4 box" id="box1"></div>
+            <div class="col-xs-4 box" id="box2"></div>
+            <div class="col-xs-4 box" id="box3"></div>
           </div>
 
+          <div class="row">
+            <div class="col-xs-4 box" id="box4"></div>
+            <div class="col-xs-4 box" id="box5"></div>
+            <div class="col-xs-4 box" id="box6"></div>
+          </div>
 
+          <div class="row">
+            <div class="col-xs-4 box" id="box7"></div>
+            <div class="col-xs-4 box" id="box8"></div>
+            <div class="col-xs-4 box" id="box9"></div>
+          </div>
 
         </div>
       </div>
+
+      <button class="col-xs-2 col-xs-offset-5" id="reset">New Game!</button>
+
     </div>
+
   </body>
+
 </html>
